[metadata]
name = anycast-healthchecker
author = Pavlos Parissis
author-email = pavlos.parissis@gmail.com
maintainer = Pavlos Parissis
maintainer-email = pavlos.parissis@gmail.com
summary = A healthchecker for Anycasted Services
description = Anycast-healthchecker monitors a service by doing periodic health
              checks and based on the result instructs Bird daemon to either
              advertise or withdraw the route to reach the monitored service. As
              a result Bird will only advertise routes for healthy services.

              Bird must be configured in a certain way to interface properly
              with anycast-healthchecker.

              Anycast-healthchecker is a Python program, which uses the daemon
              library to implement a well-behaved Unix daemon process and
              threading to run multiple service checks in parallel.
home-page = https://github.com/unixsurfer/anycast_healthchecker
license = ASL 2.0
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Topic :: System :: Monitoring
        Topic :: Utilities
requires-dist =
    python-json-logger
    docopt
keywords = healthchecker anycast ECMP

[files]
packages =
    anycast_healthchecker
    anycast
    healthchecker
    Equal-Cost Multi-Pathing
    monitor

[entry_points]
console_scripts =
     anycast-healthchecker = anycast_healthchecker.main:main

[bdist_rpm]
packager = Mischa Sallé <msalle@nikhef.nl>
doc_files = AUTHORS
            LICENSE.md
            README.html
            ChangeLog
            TODO.html
            *.png
            anycast-healthchecker.conf
build_requires = python3-devel
                 python3-setuptools
                 python3-docutils
                 python3-pbr
requires = python3-docopt
           python3-json-logger
changelog = * Mon Dec 27 2021 Mischa Salle <msalle@nikhef.nl> 0.9.2.dev1-1
            - include doc files
            - add description
            - add changelog
